debhelper (13.5.2) UNRELEASED; urgency=medium

  * dh_installsystemd: Revert change to deploy systemd files into
    usr/lib/systemd.  (Closes: #993316, #993759)
  * dh_installinit: Ditto.
  * dh_systemd_enable: Ditto.
  * dh_systemd_start: Ditto.

 -- Niels Thykier <niels@thykier.net>  Mon, 06 Sep 2021 17:43:56 +0000

debhelper (13.5.1) unstable; urgency=medium

  [ Paul Wise ]
  * cmake.pm: make it possible to override dh provided ctest arguments

  [ Niels Thykier ]
  * cmake.pm: Add missing import which broke cmake related builds.
    Thanks to Boyuan Yang for reporting the issue.
    (Closes: #993345)

 -- Niels Thykier <niels@thykier.net>  Tue, 31 Aug 2021 05:43:35 +0000

debhelper (13.5) unstable; urgency=medium

  * dh_installdeb: Install debian/conffiles in compat 12+ again
    (undoing the compat 12 change saying dh_installdeb would ignore
    this file).  The file can now be using for the activating the
    `remove-on-upgrade` feature from dpkg 1.20.
  * dh_installdeb: Automatically rewrite `rm_conffiles` into the
    new `remove-on-upgrade` feature from dpkg when possible.
  * cmake.pm: Pass `ARGS+=--verbose` to make when running tests
    in the cmake+make variant except when "terse" is in
    DEB_BUILD_OPTIONS.  Thanks to Paul Wise for the suggestion.
    (Closes: #992623)
  * python_support.pm: Remove obsolete dh addon.  It did nothing
    but warn and nothing used it anymore.
  * dh: Document debhelper provided dh addon sequences.
  * single_binary.pm: New dh addon ("single-binary") that explicitly
    activates the "single binary" work flow, where dh_auto_install
    uses debian/<pkg> as default --destdir when there is only a
    single binary package.  It will error out if used in a
    source package building multiple binary packages.
  * dh: Activate "single-binary" addon by default in compat levels
    up to and including compat 14 when the source package only lists
    one binary package in debian/control.  In compat 14, emit a warning