@@ -5,6 +5,9 @@ debhelper (13.5.2) UNRELEASED; urgency=medium
   * dh_installinit: Ditto.
   * dh_systemd_enable: Ditto.
   * dh_systemd_start: Ditto.
+  * SequencerUtil.pm: Remove duplicate "-a" option to some commands.
+    Thanks to Christoph Berg for reporting the issue.
+    (Closes: #971761)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 06 Sep 2021 17:43:56 +0000
 
